...
        <variable
            name="Sort"
            type="com.th3pl4gu3.locky_offline.core.tuning.AccountSort" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Layout_Filter_Account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/Sheet_Title_Sort"
...
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/Barrier_Icon_Done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:barrierDirection="start"
            app:constraint_referenced_ids="Button_Changes_Confirm" />

        <ImageButton
            android:id="@+id/Button_Changes_Confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
...
