<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Toolbar_Filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/menu_toolbar_filter"
        app:showAsAction="always" />

</menu>